@@ -21,6 +21,12 @@ Version 2.2
 - Added new token types and lexing for magic methods and variables in Python
   and PHP.
 
+- Added a new token type for string affixes and lexing for them in Python and
+  C++ lexers.
+
+- Added a new token type for heredoc (and similar) string delimiters and
+  lexing for them in C++, Perl, PHP and Ruby lexers.
+
 
 Version 2.1.1
 -------------
